<resources>
    <string name="app_name">Hotel</string>
    <string name="name">Hotel Padama</string>
    <string name="app_description">Inspiramos y llegamos a miles de viajeros a través de nuestra appMovil.</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Ingresar</string>
    <string name="foother">©Padama 2021</string>
    <string name="button">Comenzar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="error_password">Password must contain al least 6 characters.</string>
    <string name="product_title">Title</string>
    <string name="product_description">Description Text</string>
</resources>