<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".LoginFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stanberry"
        android:text="@string/foother"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="313dp"
        android:layout_height="476dp"
        android:background="@drawable/custom_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Campos del formulario -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="75dp"
                android:text="Bienvenido"
                android:textAppearance="@style/TextAppearance.Hotel.Title" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Hotel.TextInputLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"
                android:hint="@string/hint_username"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.Hotel.TextInputLayout"
                android:layout_width="284dp"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:hint="@string/hint_password"
                app:endIconMode="password_toggle"
                android:textColorHint="@color/black"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--  Botones del formulario-->
            <RelativeLayout
                android:layout_width="270dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="25dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_button"
                    android:layout_width="183dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="18dp"
                    app:backgroundTint="@null"
                    android:background="@drawable/custom_buttom"
                    android:text="@string/button_next" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@+id/next_button"
                android:layout_toLeftOf="@id/next_button"
                android:text="Registrate"
                android:textColor="#AF8C32" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>